tests/e2e/cases/error_method.bt
// Copyright 2026 James Casey
// SPDX-License-Identifier: Apache-2.0

// E2E tests for Object>>error: (BT-424)
// Tests Smalltalk-style error signaling from any object.

// @load tests/e2e/fixtures/validator.bt

// ===========================================================================
// BASIC error: ON PRIMITIVES
// ===========================================================================

// Integer error: raises and is catchable
[42 error: 'too big'] on: Exception do: [:e | e message]
// => too big

// Integer error: has user_error kind
[42 error: 'too big'] on: Exception do: [:e | e kind]
// => user_error

// Integer error: has correct class
[42 error: 'too big'] on: Exception do: [:e | e errorClass]
// => Integer

// String error: works
['hello' error: 'bad string'] on: Exception do: [:e | e message]
// => bad string

// String error: has correct class
['hello' error: 'bad string'] on: Exception do: [:e | e errorClass]
// => String

// ===========================================================================
// error: ON VALUE TYPES
// ===========================================================================

// Value type error: is catchable
v := Validator new
// => _

[v check: -1] on: Exception do: [:e | e message]
// => must be non-negative

// Value type error: has correct class
[v check: -1] on: Exception do: [:e | e errorClass]
// => Validator

// Value type error: has user_error kind
[v check: -1] on: Exception do: [:e | e kind]
// => user_error

// No error when valid
v check: 5
// => 5

// ===========================================================================
// error: WITH NON-STRING ARGUMENT
// ===========================================================================

// Integer as error message — coerced to string
[42 error: 99] on: Exception do: [:e | e kind]
// => user_error
